# FLBL2

./: .gitignore  README.md  fl.sh  gather_pins.py  gather_tx_pin_map.py  pyproject.toml  requirements-pi.txt  warmup_pi9.sh
contracts/: FLBL2.sol
elsarticle/: main.bib
fl_blockchain_evm/: client_app.py  server_app.py
fl_blockchain_evm/core/: constants.py  data.py  data_pamap2.py  data_ucihar.py
fl_blockchain_evm/infra/: blockchain.py
fl_blockchain_evm/strategy/: medical_fedavg.py
outputs/: latest
outputs_ucihar/: tx_pin_map.csv
outputs_ucihar/baseline_20260525_142812/: experiment_config.json  results.json
outputs_ucihar/baseline_20260525_152515/: experiment_config.json  results.json
outputs_ucihar/baseline_20260525_162808/: experiment_config.json  results.json
outputs_ucihar/baseline_20260525_172948/: experiment_config.json  results.json
outputs_ucihar/baseline_20260525_183301/: experiment_config.json  results.json
outputs_ucihar/baseline_20260525_193331/: experiment_config.json  results.json
outputs_ucihar/baseline_20260525_220501/: experiment_config.json  results.json
outputs_ucihar/baseline_20260525_225939/: experiment_config.json  results.json
outputs_ucihar/baseline_20260525_235424/: experiment_config.json  results.json
outputs_ucihar/baseline_20260526_004906/: experiment_config.json  results.json
outputs_ucihar/optimized_20260525_145607/: experiment_config.json  results.json
outputs_ucihar/optimized_20260525_155434/: experiment_config.json  results.json
outputs_ucihar/optimized_20260525_170004/: experiment_config.json  results.json
outputs_ucihar/optimized_20260525_180154/: experiment_config.json  results.json
outputs_ucihar/optimized_20260525_190424/: experiment_config.json  results.json
outputs_ucihar/optimized_20260525_200107/: experiment_config.json  results.json
outputs_ucihar/optimized_20260525_223302/: experiment_config.json  results.json
outputs_ucihar/optimized_20260525_232655/: experiment_config.json  results.json
outputs_ucihar/optimized_20260526_002224/: experiment_config.json  results.json
outputs_ucihar/optimized_20260526_011724/: experiment_config.json  results.json
paper_new/: main.bib  main.tex
